<resources>
    <string name="app_name">Skater App</string>
    <string name="login">Login</string>
    <string name="cadastro">Cadastro</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="btn_logar">Entrar</string>
    <string name="btn_google">Entre com o google</string>
    <string name="redefinirEmailHint">E-mail</string>
    <string name="emailHint">E-mail</string>
    <string name="senhaHint">Senha</string>
    <string name="btn_cadastrar_anuncio">SALVAR ANÚNCIO</string>
    <string name="btn_atualizar_anuncio">ATUALIZAR ANÚNCIO</string>
    <string name="valor">Valor</string>
    <string name="titulo">Título</string>
    <string name="regiao">REGIÃO   </string>
    <string name="categoria">CATEGORIA</string>
    <string name="div">|</string>
    <string name="telefone">Número do WhatsApp.</string>
    <string name="valor_hint">R$900,00</string>
    <string name="t_tulo">Título</string>
    <string name="descri_o">Descrição Ex:\nEm boas condições,\nentrego na pista de skate.</string>
    <string name="estado">RS</string>
    <string name="menu_redefinir">Redefinir filtro</string>
    <string name="menu_meus_anuncios">Meus Anúncios</string>
    <string name="menu_sair">Sair</string>
    <string name="menu_suporte">Enviar email ao suporte</string>
    <string name="menu_compartilhar">Compartilhar App</string>
    <string name="menu_picosRole">Picos pro rolê</string>
    <string name="mapa_de_picos">Mapa dos pico</string>
    <string name="text_marker1">Rolê Suave</string>
    <string name="text_marker2">Rolê Rápido</string>
    <string name="menu_avaliar">Avaliar o App</string>
    <string name="menu_logar_cadastrar">Logar / Cadastrar</string>
    <string name="conversar">Conversar no WhatsApp</string>
    <string name="nome">Seu nome</string>
    <string name="txtBtnRedefinir">Enviar email de redefinição</string>
    <string name="esqueci_senha"><u>Esqueci minha senha</u></string>
    <string name="politicasDePrivacidade"><u>Política De Privacidade</u></string>
    <string name="informe_meusAnuncio">Você ainda não adicionou nenhum anúncio.</string>
    <string name="msg_inicial_logo">Feito por skatista para skatistas.</string>
    <string name="default_notification_channel_id">fcm_default_channel</string>
    <string name="todo">TODO</string>
    <string name="lista_imgs_carouselView">listagem de imagens</string>
    <string name="img_inicial_view">Imagem inicial</string>
    <string name="entre_com_google_Btn">Entre com o google</string>
    <string name="selector_acesso">Seletor de cadastro ou login</string>
    <string name="name_location_marker">Nome do local</string>
    <string name="focar_no_meu_local">focar no meu local</string>
    <string name="nome_do_local">Nome do local</string>
    <string name="info">Info</string>
    <string name="text_info_1">Rolê Suave, local onde pode andar de skate tranquilo e sem problemas.</string>
    <string name="text_info_2">Rolê Rápido, local onde não é permitido andar de skate, tome cuidado</string>
    <string name="nav_open">Abrir</string>
    <string name="nav_close">Fechar</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="store">Lojas</string>
    <string name="meusProd">Meus produtos</string>
    <string name="meusDados">Meus Dados</string>
    <string name="cadastre_sua_loja">Cadastre sua Loja</string>
    <string name="cpf">CPF ou CNPJ</string>
    <string name="phone">Telefone ou celular</string>
    <string name="nome_da_loja_ou_marca">Nome da loja ou marca</string>
    <string name="cep">Cep</string>
    <string name="descriptionEditImg">trocar imagem</string>
    <string name="txt_email_android_exemplo">android.skaterTrade@android.com</string>
    <string name="hint_nome_responsalvelLoja">Nome do responsavel pela loja</string>
    <string name="hint_telefone_loja">"Telefone da loja "</string>
    <string name="btn_txt_atualizar_dados">Atualizar Dados</string>
    <string name="informa_es">Informações</string>
    <string name="txt_recursos_app">Segue abaixo alguns recursos do App</string>
    <string name="title_infoApp">Sobre este App</string>
    <string name="txt_0_Info">O <b>SkaterTrade</b> é um aplicativo inovador desenvolvido por skatista especialmente para a comunidade de skatistas apaixonados por esse esporte radical. Ele oferece uma plataforma única que permite aos skatistas comprar, vender e negociar peças de skate de forma fácil e conveniente. Com uma interface intuitiva e recursos robustos, o SkaterTrade se torna o ponto de encontro virtual perfeito para os entusiastas do skate.</string>
    <string name="title_txt_1"><b>1 - Listagem de Produtos</b></string>
    <string name="txt_1_Info">Os usuários podem criar anúncios detalhados para listar as peças de skate que desejam vender. Eles podem incluir fotos, descrições, preços e informações de contato.</string>
    <string name="title_txt_2"><b>2 - Pesquisa Avançada</b></string>
    <string name="txt_2_Info">Os compradores podem realizar pesquisas avançadas por categoria de produtos e localização para encontrar exatamente o que estão procurando.</string>
    <string name="title_txt_3"><b>3 - Perfil de Usuário</b></string>
    <string name="txt_3_Info">Cada usuário possui um perfil pessoal onde podem exibir seus produtos à venda e informações de contato.</string>
    <string name="title_txt_4"><b>4 - Segurança e Privacidade</b></string>
    <string name="txt_4_Info">O SkaterTrade prioriza a segurança dos usuários e seus dados pessoais são protegidos por medidas de segurança robustas.</string>
    <string name="txt_5_Info">O <b>SkaterTrade</b> \né mais do que apenas um aplicativo de compra e venda; é uma comunidade vibrante de skatistas que compartilham sua paixão pelo esporte e pelo estilo de vida. Com sua ampla gama de recursos e foco na segurança e facilidade de uso, o app SkaterTrade se torna a escolha número um para skatistas em busca de peças de skate de qualidade e boas negociações. Se você é um skatista ávido, não perca a oportunidade de fazer parte desta comunidade exclusiva. Baixe o SkaterTrade hoje e comece a negociar suas peças de skate favoritas!</string>
    <string name="cadastrar_anuncio_titleActionBar">Cadastrar anúncio</string>
    <string name="editar_anuncio_titleActionBar">Editar anúncio</string>
    <string name="edit_hint_cidade">Cidade</string>
    <string name="excluir_an_ncio_menu">Excluir Anúncio</string>
    <string name="erro">"ERRO: "</string>
    <string name="erro2">"ERRO!"</string>
    <string name="informe_seu_nome">Informe seu nome</string>
    <string name="informe_uma_senha_dica">Para a maior segurança informe uma Senha com no mínimo 10 caracters.</string>
    <string name="informe_um_e_mail">Informe um e-mail</string>
    <string name="problemas_com_acesso_a_internet">Problemas com acesso a internet</string>
    <string name="ola">"Olá "</string>
    <string name="atualiza_o_dispon_vel">Atualização disponível!</string>
    <string name="dica_atualizacao_google_play">Uma nova versão para esse app está disponível no Google Play.</string>
    <string name="msg_btn_atualizar">"Atualizar"</string>
    <string name="msg_btn_cancelar">Cancelar</string>
    <string name="lojas_em_breve_estar_dipon_vel">Lojas em breve estará diponível</string>
    <string name="suporte_skatertrade">Suporte SkaterTrade</string>
    <string name="ok_btn">Ok</string>
    <string name="msg_regiao">REGIÃO</string>
    <string name="estado_code">estado</string>
    <string name="selecione_o_estado">Selecione o estado</string>
    <string name="selecione_a_categoria">Selecione a categoria</string>
    <string name="categoria_code">categoria</string>
    <string name="cadastrar_loja">Cadastrar loja</string>
    <string name="escolha_uma_imagem_como_logo_para_sua_loja">Escolha uma imagem como \"logo\" para sua loja</string>
    <string name="informe_o_nome_da_sua_loja">Informe o nome da sua loja!</string>
    <string name="informe_o_seu_nome">Informe o seu NOME!</string>
    <string name="informe_um_cpf_ou_cnpj_v_lido">Informe um CPF ou CNPJ válido!</string>
    <string name="informe_um_telefone_v_lido">Informe um telefone válido!</string>
    <string name="no_m_nimo_10_caracters">Para a maior segurança informe uma Senha com no mínimo 10 caracters.</string>
    <string name="informe_um_e_mail_v_lido_para_sua_loja">Informe um E-mail válido para sua loja!</string>
    <string name="esse_nome_j_foi_cadastrados_no_sistema">Esse nome já foi cadastrados no sistema!</string>
    <string name="cadastrados_no_sistema">Esse número de telefone já foi cadastrados no sistema!</string>
    <string name="esse_cpf_j_foi_cadastrados_no_sistema">Esse CPF já foi cadastrados no sistema!</string>
    <string name="esse_cnpj_j_foi_cadastrados_no_sistema">Esse CNPJ já foi cadastrados no sistema!</string>
    <string name="cpf_inv_lido">CPF Inválido</string>
    <string name="cnpj_inv_lido">CNPJ Inválido</string>
    <string name="houve_uma_falha_na_comunica">Houve uma falha na comunicação tente novamente mais tarde!</string>
    <string name="permiss_es_negadas">Permissões negadas!</string>
    <string name="permitir_o_acesso_a_galeria">Para postar imagens voçê precisa permitir o acesso a galeria.</string>
    <string name="comfirmar">Comfirmar</string>
    <string name="excluir_an_ncio">Excluir anúncio!</string>
    <string name="deseja_excluir_esse_an_ncio">Tem certeza que deseja excluir esse anúncio?</string>
    <string name="nao">Não</string>
    <string name="sim">Sim</string>
    <string name="estados_info">Estados</string>
    <string name="seu_estado">Seu Estado</string>
    <string name="categorias_info">Categorias</string>
    <string name="escolha_ao_menos_uma_imagem">Escolha ao menos uma imagem</string>
    <string name="escolha_uma_categoria">Escolha uma categoria</string>
    <string name="escolha_um_estado">Escolha um estado</string>
    <string name="preencha_uma_descri_o">Preencha uma descrição</string>
    <string name="preencha_um_n_mero_de_celular_v_lido">Preencha um número de celular válido</string>
    <string name="preencha_um_valor_r">Preencha um valor R$</string>
    <string name="preencha_um_t_tulo">Preencha um título</string>
    <string name="preencha_uma_cidade">Preencha uma cidade</string>
    <string name="salvando_an_ncio_aguarde">Salvando Anúncio aguarde...</string>
    <string name="atualizando_an_ncio_aguarde">Atualizando Anúncio aguarde...</string>
    <string name="erro_outra_foto">Erro ao recuperar imagem, tente outra imagem ou tire outra foto</string>
    <string name="txt_info">" Info"</string>
    <string name="ol_encontrei_seu_text_info">Olá encontrei seu anúncio no App Skater e gostaria de mais informações.\nTítulo do anúncio: %s</string>
    <string name="detalhes_do_an_ncio">Detalhes do anúncio</string>
    <string name="dados_do_perfil">Dados do perfil</string>
    <string name="informe_o_n_mero_de_celular_ou_whatsapp_da_loja">Informe o Número de celular ou whatsApp da loja</string>
    <string name="informe_o_nome_do_responsavel_pela_loja">Informe o nome do responsavel pela loja</string>
    <string name="informe_o_nome_da_loja">Informe o nome da loja</string>
    <string name="redefinir_senha">Redefinir senha</string>
    <string name="digite_seu_e_mail">Digite seu E-mail</string>
    <string name="foi_enviado_um_link_para_redefini_senha">"Foi enviado um link para redefinição de senha no email "</string>
    <string name="ok">Ok</string>
    <string name="para_editar_ou_excluir_o_an_ncio_basta_clicar_nele">\nPara editar ou excluir o anúncio basta clicar nele</string>
    <string name="dica">Dica!</string>
    <string name="meus_an_ncios">Meus anúncios</string>
    <string name="marcar_pico_neste_local">Marcar pico neste local ?</string>
    <string name="marcar">Marcar</string>
    <string name="cancelar">Cancelar</string>
    <string name="defina_um_nome_pro_pico">Defina um nome pro pico</string>
</resources>