<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context="com.droid.app.skaterTrader.activity.AcessoActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        android:elevation="6dp"
        android:src="@drawable/skate_is_life"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/img_inicial_view" />

    <EditText
        android:id="@+id/editNome"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:background="@color/lightBlue"
        android:drawableEnd="@drawable/baseline_person_24"
        android:ems="10"
        android:hint="@string/nome"
        android:textColor="@color/dark"
        android:inputType="textPersonName|text|textCapWords"
        android:lines="1"
        android:maxLength="30"
        android:padding="10dp"
        android:singleLine="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:visibility="visible"
        android:importantForAutofill="no"
        android:autofillHints=""/>

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="40dp"
        android:background="@color/lightBlue"
        android:drawableEnd="@drawable/baseline_email_24"
        android:ems="10"
        android:hint="@string/emailHint"
        android:textColor="@color/dark"
        android:inputType="textEmailAddress"
        android:lines="1"
        android:maxLength="30"
        android:padding="10dp"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:importantForAutofill="no"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="-4dp"
        android:layout_marginEnd="40dp"
        android:background="@color/lightBlue"
        android:drawableEnd="@drawable/baseline_lock_person_24"
        android:ems="10"
        android:hint="@string/senhaHint"
        android:textColor="@color/dark"
        android:inputType="textPassword"
        android:maxLength="18"
        android:padding="10dp"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editEmail"
        android:importantForAutofill="no"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textViewRedefinir"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="2dp"
        android:gravity="center"
        android:onClick="btnRedefinirSenha"
        android:text="@string/esqueci_senha"
        android:textColor="@color/teal_700"
        android:textSize="19sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:progressTint="#7400A5"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGoogle"
        tools:visibility="visible" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="53dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="#081537"
            android:textSize="17sp"
            android:textStyle="bold|italic" />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:contentDescription="@string/selector_acesso"
            android:shadowColor="#5D00BC"
            android:text=""
            android:textColorHighlight="#5d00bc"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cadastro"
            android:textColor="#081C50"
            android:textSize="17sp"
            android:textStyle="bold|italic" />
    </LinearLayout>

    <Button
        android:id="@+id/btnAcessar"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/bg_btn"
        android:drawableLeft="@drawable/as_small"
        android:paddingRight="80dp"
        android:elevation="4dp"
        android:gravity="center"
        android:contentDescription="@string/menu_logar_cadastrar"
        android:text="@string/btn_logar"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:rippleColor="@color/rippleColorBtn" />

    <Button
        android:id="@+id/btnGoogle"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="60dp"
        android:contentDescription="@string/entre_com_google_Btn"
        android:background="@drawable/bg_btn_google"
        android:elevation="1dp"
        android:text="@string/btn_google"
        android:textColor="@color/black"
        android:drawableEnd="@drawable/fui_ic_googleg_color_24dp"
        android:theme="@style/botaoGoogle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAcessar"
        app:rippleColor="@color/rippleColorBtn"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textViewPoliticas"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:gravity="center"
        android:onClick="pulicasPrivacidade"
        android:text="@string/politicasDePrivacidade"
        android:textColor="@color/teal_700"
        android:textSize="19sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar"
         />

</androidx.constraintlayout.widget.ConstraintLayout>